# farm_erp

./: .env.prod.example  .gitignore  CLAUDE.md  Makefile  README.md  SCOPE.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260414_0001_initial_schema.py  20260416_0002_pcp_planejada_status.py  20260416_0003_folha_extra_columns.py
backend/app/: main.py
backend/app/core/: config.py  database.py  security.py
backend/app/modules/auth/: model.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/comercial/: model.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/compras/: model.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/dashboard/: repository.py  router.py  schemas.py  service.py
backend/app/modules/estoque/: model.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/faturamento/: model.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/financeiro/: model.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/folha/: model.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/pcp/: model.py  repository.py  router.py  schemas.py  service.py
backend/app/shared/: base_model.py  enums.py  exceptions.py  models.py  responses.py
backend/scripts/: reset_db.py  seed.sql  seed_only.py
frontend/: Dockerfile  Dockerfile.prod  middleware.ts  package-lock.json  (+1 more)
(+89 files in other folders)
