[tool.poetry]
name = "coffee-farm-erp-backend"
version = "1.0.0"
description = "Coffee Farm ERP - Backend API"
authors = ["Coffee Farm ERP Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
pydantic = {extras = ["email"], version = "^2.10.3"}
pydantic-settings = "^2.6.1"
python-multipart = "^0.0.19"
pillow = "^11.0.0"
reportlab = "^4.2.5"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.group.dev.dependencies]
httpx = "^0.28.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
